--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,12 @@
 			<version>0.11.1</version>
 			<scope>runtime</scope>
 		</dependency>
-	</dependencies>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.13.2</version>
+		<scope>test</scope>
+	</dependency>
 
 	<build>
 		<plugins>
